--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,120 +1,226 @@
-<?xml version="1.0" encoding="utf-8"?>
+?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
     <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
+        android:id="@+id/tableLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:shrinkColumns="*"
         android:stretchColumns="*"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal">
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_span="6"
                 android:gravity="center"
-                android:text="Resept"
-                android:textSize="18dp"
-                android:textStyle="bold" />
-
+                android:text="Расчет компонентов в рецепте"
+                android:textSize="18sp"
+                 />
         </TableRow>
 
         <TableRow
+            android:id="@+id/tableRow"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/textView2"
-                android:text="1"
-                android:textSize="18dp" />
+                android:text="Количество порций"
+                android:importantForAutofill="no"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif"
+                android:gravity="center"/>
 
             <EditText
                 android:id="@+id/editTextTextPersonName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="Компонент"
-                android:text="" />
-
-            <EditText
-                android:id="@+id/editTextNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:hint="Введите кол-во"
+                android:importantForAutofill="no"
                 android:inputType="number"
-                android:text="" />
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif"
+                android:gravity="center"/>
 
-            <EditText
-                android:id="@+id/editTextNumber2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number" />
+            <Button
+                android:id="@+id/button2"
+                android:text="Расчитать"
+                android:importantForAutofill="no"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/textView"
+                android:textSize="12sp"
+                android:importantForAutofill="no"
+                android:textStyle="bold"
+                android:typeface="serif"
+                android:inputType=""/>
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textView11"
+                android:gravity="center"
+                android:text="Рецепт"
+                android:importantForAutofill="no"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="74dp"
-                android:layout_height="match_parent"
-                android:text="" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+                android:gravity="center"
+                android:text="№"
+                android:importantForAutofill="no"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:gravity="center"
+                android:text="Компонент"
+                android:importantForAutofill="no"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:gravity="center"
+                android:text="Кол-во по рецепту"
+                android:importantForAutofill="no"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:gravity="center"
+                android:text="Нужное кол-во"
+                android:importantForAutofill="no"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
         </TableRow>
 
         <TableRow
+            android:id="@+id/tableRow4"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
+            <TextView
+                android:id="@+id/textView12"
+                android:gravity="center"
+                android:text="1"
+                android:importantForAutofill="no"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+
+            <EditText
+                android:id="@+id/editTextTextPersonName2"
+                android:gravity="center"
+                android:hint="Введите компонент"
+                android:autofillHints="username"
+                android:inputType="text"
+                android:text=""
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+
+            <EditText
+                android:id="@+id/editTextNumber"
+                android:gravity="center"
+                android:autofillHints="username"
+                android:inputType="number"
+                android:hint="0"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:gravity="center"
+                android:text=""
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textView16"
+                android:gravity="center"
+                android:text="2"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+
+            <EditText
+                android:id="@+id/editTextTextPersonName5"
+                android:gravity="center"
+                android:hint="Введите компонент"
+                android:autofillHints="username"
+                android:inputType="text"
+                android:text=""
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+
+            <EditText
+                android:id="@+id/editTextNumber5"
+                android:gravity="center"
+                android:autofillHints="number"
+                android:inputType="number"
+                android:hint="0"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+
+            <TextView
+                android:id="@+id/textView17"
+                android:gravity="center"
+                android:text=""
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
         </TableRow>
     </TableLayout>
 
