--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,14 +76,14 @@
                 android:textSize="14sp" />
 
             <EditText
-                android:id="@+id/editTextNumber"
+                android:id="@+id/Resept1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:text="" />
 
             <EditText
-                android:id="@+id/editTextNumber2"
+                android:id="@+id/Nado1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number" />
@@ -101,7 +101,7 @@
                 android:text="Кол-во порций" />
 
             <EditText
-                android:id="@+id/editTextNumber3"
+                android:id="@+id/Porsiy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number" />
@@ -110,6 +110,7 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="onButtonClick"
                 android:text="Расчитать"
                 android:textSize="12sp" />
         </TableRow>
